# guile-openai

./: .gitignore  AUTHORS  Makefile.am  NEWS  README.md  configure.ac  env.in
openai/: Makefile.am  client.scm  types.scm
